force-app/main/default/objects/Award__c/Award__c.object-meta.xml
<CustomObject>
    <label>Award</label>
    <nameField>
        <displayFormat>AW{00000000}</displayFormat>
        <label>Award ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>