force-app/main/default/objects/Award__c/fields/AND_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>AND_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AND Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Awards2</relationshipName>
    <type>Lookup</type>
</CustomField>