force-app/main/default/objects/Award__c/fields/AND_Name__c.field-meta.xml
<CustomField>
    <fullName>AND_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AND Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Awards (AND Name)</relationshipLabel>
    <relationshipName>Awards1</relationshipName>
    <type>Lookup</type>
</CustomField>