force-app/main/default/objects/Award__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <inlineHelpText>Date nomination is approved by Assistant National Director</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>