force-app/main/default/objects/Award__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <inlineHelpText>Indicates whether recognition is based on the initiation of an assignment or the completion of an assignment</inlineHelpText>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Milestone_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>