force-app/main/default/objects/Award__c/fields/Award_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Award_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box indicates that the award has been sent to the volunteer</inlineHelpText>
    <label>Award Delivered</label>
    <type>Checkbox</type>
</CustomField>