force-app/main/default/objects/Award__c/fields/Award_Name__c.field-meta.xml
<CustomField>
    <fullName>Award_Name__c</fullName>
    <label>Award Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AARP Foundation Tax-Aide Fellow</fullName>
            </value>
            <value>
                <fullName>Milestone Award</fullName>
            </value>
            <value>
                <fullName>Century Club</fullName>
            </value>
            <value>
                <fullName>State Level Achievement Award</fullName>
            </value>
            <value>
                <fullName>National Level Achievement Award</fullName>
            </value>
            <value>
                <fullName>Officer Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>