force-app/main/default/objects/Award__c/fields/Award_Processor__c.field-meta.xml
<CustomField>
    <fullName>Award_Processor__c</fullName>
    <defaultValue>&quot;taxaide@aarp.org&quot;</defaultValue>
    <label>Award Processor</label>
    <type>Email</type>
</CustomField>