force-app/main/default/objects/Award__c/fields/Award_Year__c.field-meta.xml
<CustomField>
    <fullName>Award_Year__c</fullName>
    <inlineHelpText>Populated with the year from Receive By Date by default</inlineHelpText>
    <label>Award Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>