force-app/main/default/objects/Award__c/fields/Courses_Taught__c.field-meta.xml
<CustomField>
    <fullName>Courses_Taught__c</fullName>
    <label>Courses Taught</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Milestone_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>