force-app/main/default/objects/Award__c/fields/Has_Held_A_Leadership_Role__c.field-meta.xml
<CustomField>
    <fullName>Has_Held_A_Leadership_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Held A Leadership Role</label>
    <type>Checkbox</type>
</CustomField>