force-app/main/default/objects/Award__c/fields/Has_Served_10_Years_Or_More__c.field-meta.xml
<CustomField>
    <fullName>Has_Served_10_Years_Or_More__c</fullName>
    <formula>IF(Net_Years_Served__c&gt;=10, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Served 10 Years Or More</label>
    <type>Checkbox</type>
</CustomField>