force-app/main/default/objects/Award__c/fields/Is_Not_A_Previous_Fellow_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_A_Previous_Fellow_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not A Previous Fellow Recipient</label>
    <type>Checkbox</type>
</CustomField>