force-app/main/default/objects/Award__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <inlineHelpText>Type of achievement for which volunteer is being recognized</inlineHelpText>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Years of Service</fullName>
            </value>
            <value>
                <fullName>Courses Taught</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>