force-app/main/default/objects/Award__c/fields/Net_Years_Served__c.field-meta.xml
<CustomField>
    <fullName>Net_Years_Served__c</fullName>
    <formula>Program_Volunteer__r.Net_Years_Served__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time spent as an active volunteer with this program based on Volunteer Assignment start and end dates. Gaps in service between active assignments are not counted</inlineHelpText>
    <label>Net Years Served</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>