force-app/main/default/objects/Award__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Related enterprise level program</description>
    <formula>IF(RecordType.Name = &quot;Assignment&quot;, 

Volunteer_Assignment__r.Position__r.Program__r.Branding_Descriptor__c, 

Program_Volunteer__r.Program__r.Branding_Descriptor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related enterprise level program</inlineHelpText>
    <label>Program</label>
    <type>Text</type>
</CustomField>