force-app/main/default/objects/Award__c/fields/Program_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Program_Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Metrics</label>
    <referenceTo>Program_Metrics__c</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>