force-app/main/default/objects/Award__c/fields/Program_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Related program volunteer record</inlineHelpText>
    <label>Program Volunteer</label>
    <referenceTo>Program_Volunteer__c</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>