force-app/main/default/objects/Award__c/fields/Publish__c.field-meta.xml
<CustomField>
    <fullName>Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will make this nomination visible to all Tax-Aide Volunteer Portal users</inlineHelpText>
    <label>Publish</label>
    <type>Checkbox</type>
</CustomField>