force-app/main/default/objects/Award__c/fields/RC_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>RC_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RC Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Awards1</relationshipName>
    <type>Lookup</type>
</CustomField>