force-app/main/default/objects/Award__c/fields/RC_Name__c.field-meta.xml
<CustomField>
    <fullName>RC_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RC Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Awards (RC Name)</relationshipLabel>
    <relationshipName>Awards3</relationshipName>
    <type>Lookup</type>
</CustomField>