force-app/main/default/objects/Award__c/fields/Received_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_By_Date__c</fullName>
    <inlineHelpText>Date by which award should be provided to nominee. Must be at least 14 days from date of submission of nomination</inlineHelpText>
    <label>Received By Date</label>
    <type>Date</type>
</CustomField>