force-app/main/default/objects/Award__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>Volunteer_Assignment__r.Position__r.Role__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This position is related to this generic role that is shared across AARP</inlineHelpText>
    <label>Role</label>
    <type>Text</type>
</CustomField>