force-app/main/default/objects/Award__c/fields/SC_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>SC_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SC Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>