force-app/main/default/objects/Award__c/fields/SC_Name__c.field-meta.xml
<CustomField>
    <fullName>SC_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SC Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Awards (SC Name)</relationshipLabel>
    <relationshipName>Awards2</relationshipName>
    <type>Lookup</type>
</CustomField>