force-app/main/default/objects/Award__c/fields/Service_Being_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Service_Being_Recognized__c</fullName>
    <inlineHelpText>Indicate the reason for your nomination. What makes this person’s service distinguished? What is this volunteer’s significant contribution that makes him/her an appropriate person to be selected as one of this year’s Fellow recipients?</inlineHelpText>
    <label>Service Being Recognized</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>