force-app/main/default/objects/Award__c/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <inlineHelpText>The address pre-populates with the nominee’s supervisor based on assignment. Please confirm that this is the appropriate person to present the Fellow and let that supervisor know that a pin and letter will be sent to them if they are not already aware</inlineHelpText>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>