force-app/main/default/objects/Award__c/fields/Volunteer_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related volunteer assignment</inlineHelpText>
    <label>Volunteer Assignment</label>
    <referenceTo>Volunteer_Assignment__c</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>