force-app/main/default/objects/Award__c/fields/Years_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Service__c</fullName>
    <inlineHelpText>Total time spent as an active volunteer with this program based on Volunteer Assignment start and end dates. Gaps in service are included for Driver Safety; gaps in service are not counted for Tax-Aide.</inlineHelpText>
    <label>Years of Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Milestone_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>