force-app/main/default/objects/Award__c/recordTypes/Assignment.recordType-meta.xml
<RecordType>
    <fullName>Assignment</fullName>
    <active>true</active>
    <description>Record type for awards based on a new role or assignment end</description>
    <label>Assignment</label>
</RecordType>