force-app/main/default/objects/Award__c/recordTypes/Fellow.recordType-meta.xml
<RecordType>
    <fullName>Fellow</fullName>
    <active>true</active>
    <description>Record type for Fellow nomination and approval process</description>
    <label>Fellow</label>
</RecordType>