force-app/main/default/objects/Award__c/recordTypes/Milestone.recordType-meta.xml
<RecordType>
    <fullName>Milestone</fullName>
    <active>true</active>
    <description>Record type for Milestone awards</description>
    <label>Milestone</label>
</RecordType>