force-app/main/default/objects/Award__c/validationRules/Approver_Cannot_Unpublish.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Cannot_Unpublish</fullName>
    <active>true</active>
    <description>Approver cannot unpublish an award record once it has been published.</description>
    <errorConditionFormula>AND( 
NOT(Publish__c),
ISPICKVAL(Status__c, &quot;Approved&quot;),
OR( 
$Profile.Name = &quot;Tax-Aide Volunteer Leader - LMS Admin&quot;,
$Profile.Name = &quot;Tax-Aide Volunteer Leader - Read Only - LMS Admin&quot;
))</errorConditionFormula>
    <errorMessage>Approver cannot unpublish an award record once it has been published.</errorMessage>
</ValidationRule>