force-app/main/default/objects/Award__c/validationRules/Fields_Cannot_Be_Changed_TA_Staff.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_Cannot_Be_Changed_TA_Staff</fullName>
    <active>true</active>
    <description>Award Type, Contact, Program Volunteer, and Received By Date cannot be changed by Tax-Aide Staff users</description>
    <errorConditionFormula>AND(
$Profile.Name = &quot;Tax-Aide Staff - LMS Admin&quot;,
NOT(ISPICKVAL(Status__c, &quot;Declined&quot;)),

OR( 
ISCHANGED(Award_Name__c),
ISCHANGED(Contact__c),
ISCHANGED(Program_Volunteer__c),
ISCHANGED(Received_By_Date__c)
))</errorConditionFormula>
    <errorMessage>Award Type, Contact, Program Volunteer, and Received By Date cannot be changed by Tax-Aide Staff users.</errorMessage>
</ValidationRule>