force-app/main/default/objects/Award__c/validationRules/Publish_Cannot_Be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Publish_Cannot_Be_Selected</fullName>
    <active>true</active>
    <description>Publish can only be selected if Status is Approved.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, &quot;Approved&quot;)),
ISCHANGED(Publish__c)
)</errorConditionFormula>
    <errorMessage>Publish can only be selected if Status is Approved.</errorMessage>
</ValidationRule>