force-app/main/default/objects/Award__c/validationRules/Receive_Date_After_Submit_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Receive_Date_After_Submit_Date</fullName>
    <active>true</active>
    <description>Validates that Received By Date is at least 14 days after Submission Date.</description>
    <errorConditionFormula>NOT(Received_By_Date__c &gt;= DATEVALUE(CreatedDate)+14)</errorConditionFormula>
    <errorMessage>Received By Date must be more than 14 days from date of submission.</errorMessage>
</ValidationRule>