force-app/main/default/objects/Award__c/validationRules/Service_Being_Recog_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Being_Recog_Cannot_Be_Blank</fullName>
    <active>true</active>
    <description>Service Being Recognized cannot be blank</description>
    <errorConditionFormula>AND(
ISBLANK(Service_Being_Recognized__c),
RecordType.Name=&quot;Fellow&quot;)</errorConditionFormula>
    <errorMessage>Service Being Recognized cannot be blank</errorMessage>
</ValidationRule>