force-app/main/default/objects/Award__c/validationRules/Service_Being_Recog_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Being_Recog_Cannot_Be_Changed</fullName>
    <active>true</active>
    <description>Service Being Recognized cannot be changed when the Status is Approved.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Approved&quot;),
ISCHANGED(Service_Being_Recognized__c)
)</errorConditionFormula>
    <errorMessage>Service Being Recognized cannot be changed when the Status is Approved.</errorMessage>
</ValidationRule>