force-app/main/default/objects/Award__c/validationRules/Shipping_Fields_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Fields_Cannot_Be_Changed</fullName>
    <active>true</active>
    <description>Shipping Information cannot be changed when the Status is Approved.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Approved&quot;),

OR( 
$Profile.Name = &quot;Tax-Aide Volunteer Leader - LMS Admin&quot;,
$Profile.Name = &quot;Tax-Aide Volunteer Leader - Read Only - LMS Admin&quot;
),

OR(
ISCHANGED(Shipping_Name__c),
ISCHANGED(Shipping_Street__c),
ISCHANGED(Shipping_City__c),
ISCHANGED(Shipping_State_Territory__c),
ISCHANGED(Shipping_Postal_Code__c),
ISCHANGED(Received_By_Date__c)
))</errorConditionFormula>
    <errorMessage>Shipping Information cannot be changed when the Status is Approved.</errorMessage>
</ValidationRule>