force-app/main/default/objects/Award__c/validationRules/Shipping_Postal_Code_5_Or_9_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Postal_Code_5_Or_9_Digits</fullName>
    <active>true</active>
    <description>Postal Code must be either 5 or 9 digits ##### or #####-####</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Approved&quot;), 

NOT(REGEX(Shipping_Postal_Code__c,
&quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
    <errorMessage>Shipping Postal Code must be either 5 or 9 digits ##### or #####-####</errorMessage>
</ValidationRule>