force-app/main/default/objects/Award__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Award_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Shipping_State_Territory__c</columns>
    <columns>Status__c</columns>
    <columns>Received_By_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>